# redteam-toolkit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: cvss-rubric.md  legal-and-ethics.md  methodology.md
redteam_toolkit/: __init__.py  cli.py  scheduler.py
redteam_toolkit/active/: canary.py  open_redirect.py  path_traversal.py  sqli.py  ssrf.py  xss.py
redteam_toolkit/core/: audit_log.py  authorization.py  cvss.py  diff.py  engagement.py  history.py  models.py  netutil.py  rate_limit.py  status.py
redteam_toolkit/dashboard/: app.py
redteam_toolkit/demo/: target_server.py
redteam_toolkit/recon/: active_dns.py  base.py  endpoint_discovery.py  fingerprint.py  passive_dns.py  port_scanner.py  subdomain_takeover.py  web_fingerprint.py
redteam_toolkit/reports/: build.py  html.py  pdf.py
redteam_toolkit/templates/: authorization-internal-redteam.yml.example  authorization-network.yml.example  authorization-web-app.yml.example
redteam_toolkit/vuln_id/: aggregate.py  cve_correlation.py  default_credentials.py  http_posture.py  tls_analyzer.py
tests/: conftest.py  test_init_templates.py  test_rate_limit.py  test_redteam_toolkit.py
tests/active/: test_engagement_gate.py  test_open_redirect.py  test_path_traversal.py  test_sqli.py  test_ssrf.py  test_xss.py
tests/fixtures/: tls_server.py
tests/recon/: test_active_dns.py  test_endpoint_discovery.py  test_fingerprint.py  test_netutil.py  test_passive_dns.py  test_port_scanner.py  test_subdomain_takeover.py  test_web_fingerprint.py
tests/reports/: test_build.py  test_cli_reporting.py  test_cvss.py  test_dashboard.py  test_diff.py  test_history.py  test_html.py  test_pdf.py  test_status.py
tests/vuln_id/: test_aggregate.py  test_cve_correlation.py  test_default_credentials.py  test_http_posture.py  (+1 more)
(+3 files in other folders)
